--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=185.80.128.101
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_PASSWORD=Dadada3
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -19,7 +19,7 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=185.80.128.101
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
