--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=185.80.128.101
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
