--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=Dadada3
+DB_DATABASE=blog
+DB_USERNAME=root
+DB_PASSWORD=dadada3
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
